--- a/www/public/style.css
+++ b/www/public/style.css
@@ -15,7 +15,7 @@ html, body {
 .Landing__header {
 	margin-bottom: 96px;
 	background-color: #002460;
-	background-image: url("./images/background_image.png");
+	background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("./images/background_image.png");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -33,7 +33,7 @@ html, body {
 }
 
 .Header__content {
-
+	width: 100%;
 }
 
 .Content__info {
@@ -53,13 +53,15 @@ html, body {
 }
 
 .Button {
+	font-family: 'Roboto', sans-serif;
+	font-size: 32px;
+	font-weight: 900;
 	border-radius: 10px;
 	padding: 20px;
 	background-color: white;
 	color: #002460;
-	font-weight: 900;
-	font-size: 32px;
 	cursor: pointer;
+	outline: none;
 	
 }
 
@@ -116,7 +118,78 @@ html, body {
 	font-weight: 400;
 }
 
-.Section__lists {}
+.Section__table {
+	width: 100%;
+}
+
+.Table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+.Tr {
+	width: 100%;
+}
+
+.Th {
+	font-size: 24px;
+	padding: 16px 24px;
+	width: 50%;
+	border: 4px solid #f1f1f1;
+	text-align: left;
+}
+
+.Td {
+	padding: 16px 24px;
+	border: 4px solid #f1f1f1;
+}
+
+.Section__form {
+	width: 100%;
+}
+
+.Form__item {
+	display: inline-block;
+	margin-right: 24px;
+}
+
+.Form__item_end {
+	margin-right: 0;
+}
+
+.Form__label {
+	display: block;
+	font-weight: 900;
+	margin-bottom: 8px;
+}
+
+.Form__input {
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	padding: 16px 24px;
+	outline: none;
+	width: 330px;
+}
+
+.Form__select {
+	font-family: 'Roboto', sans-serif;
+	font-size: 16px;
+	padding: 16px 24px;
+	outline: none;
+	width: 386px;
+}
+
+.Form__button {
+	padding: 20px 28px;
+	font-size: 16px;
+	background-color: #002460;
+	color: white;
+	border: none;
+	font-weight: 700;
+	cursor: pointer;
+	outline: none;
+}
+
 
 .List__block {
 	display: inline-block;
@@ -132,7 +205,7 @@ html, body {
 }
 
 .List__image img {
-	border-radius: 12px;
+	border-radius: 24px;
 }
 
 .List__title {
@@ -148,6 +221,43 @@ html, body {
 	padding: 0 16px;
 }
 
+.Section__lists {
+	width: 100%;
+}
+
+.Section__map {
+	width: 100%;
+}
+
+.Map__img {
+	display: inline-block;
+	margin-left: 370px
+}
+
+.Map__number {
+	margin-top: -220px;
+	font-size: 22px;
+	font-weight: 900;
+}
+
+.Map__adres{
+	margin-top: 38px;
+	font-size: 22px;
+	font-weight: 900;
+}
+
+.Map__info {
+	margin-top: 12px;
+	font-size: 18px;
+	font-weight: 400;
+}
+
 .Landing__footer {
 	background-color: #002460;
+}
+
+.Footer__section {
+	width: 940px;
+	padding: 0 42px;
+	margin: 0 auto;
 }
